Beginning recruiter side

--- a/SmashMobile_v1/Controllers/HiringManager/Base.lproj/HiringManager.storyboard
+++ b/SmashMobile_v1/Controllers/HiringManager/Base.lproj/HiringManager.storyboard
@@ -457,7 +457,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <state key="normal" title="Remove"/>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Action sent to recruiter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYn-Hk-F7T">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recruiter completed the action" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JYn-Hk-F7T">
                                                     <rect key="frame" x="57" y="112" width="239" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="italicSystem" pointSize="17"/>
@@ -987,7 +987,7 @@
                                     <action selector="takeAction:" destination="izA-Vq-ZGr" eventType="touchUpInside" id="GhD-qV-kGr"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LY8-Wx-AWR">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="LY8-Wx-AWR">
                                 <rect key="frame" x="16" y="211" width="343" height="398"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1178,6 +1178,6 @@ Past Jobs:
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="e0o-qO-jCm"/>
-        <segue reference="zwu-Hz-SjB"/>
+        <segue reference="Hpf-Lk-7TQ"/>
     </inferredMetricsTieBreakers>
 </document>
