Finished v1 HM, started v1 of recruiter

--- a/SmashMobile_v1/Controllers/HiringManager/Base.lproj/HiringManager.storyboard
+++ b/SmashMobile_v1/Controllers/HiringManager/Base.lproj/HiringManager.storyboard
@@ -50,6 +50,15 @@
                                 <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hv8-Sb-aRp">
+                                <rect key="frame" x="16" y="264" width="61" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Log In"/>
+                                <connections>
+                                    <segue destination="KQl-G9-b4I" kind="presentation" id="ahm-xm-XHW"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Stay logged in?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhT-Nr-twW">
                                 <rect key="frame" x="16" y="302" width="118" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -67,15 +76,13 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Forgot Password?"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hv8-Sb-aRp">
-                                <rect key="frame" x="16" y="264" width="61" height="30"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HIRING MANAGER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KjD-FN-qCY">
+                                <rect key="frame" x="16" y="523" width="343" height="124"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Log In"/>
-                                <connections>
-                                    <segue destination="KQl-G9-b4I" kind="presentation" id="ahm-xm-XHW"/>
-                                </connections>
-                            </button>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.031372549019607843" green="0.11372549019607843" blue="0.15294117647058825" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="boL-2z-oPu"/>
@@ -159,6 +166,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <toolbar key="tableFooterView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="dLi-ij-hfe">
+                            <rect key="frame" x="0.0" y="176" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <items>
+                                <barButtonItem title="Settings" id="JuN-1S-R33">
+                                    <connections>
+                                        <segue destination="hu1-L2-ynE" kind="presentation" id="UyV-M8-8Gd"/>
+                                    </connections>
+                                </barButtonItem>
+                            </items>
+                        </toolbar>
                         <sections>
                             <tableViewSection id="0yH-I7-xRK">
                                 <cells>
@@ -241,17 +259,16 @@
                             <outlet property="delegate" destination="dAN-UP-j3Q" id="MOS-RP-5Pe"/>
                         </connections>
                     </tableView>
-                    <toolbarItems>
-                        <barButtonItem title="Settings" id="45R-px-GQt">
-                            <connections>
-                                <segue destination="hu1-L2-ynE" kind="presentation" id="fz7-ji-gOh"/>
-                            </connections>
-                        </barButtonItem>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="zjs-eC-Phe">
                         <barButtonItem key="leftBarButtonItem" systemItem="stop" id="3wY-bG-f3Y">
                             <connections>
                                 <action selector="back:" destination="dAN-UP-j3Q" id="gJS-Y9-7kM"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Home" style="plain" id="ppx-VR-e7N">
+                            <connections>
+                                <segue destination="KQl-G9-b4I" kind="presentation" id="Seq-tS-5zA"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -872,10 +889,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <sections>
-                            <tableViewSection headerTitle="Software Engineer" id="7wn-yA-Wfa">
+                            <tableViewSection id="7wn-yA-Wfa">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="138" id="Ph2-94-Svi">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="138"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="138"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ph2-94-Svi" id="b2d-hZ-vlR">
                                             <rect key="frame" x="0.0" y="0.0" width="341" height="137.5"/>
@@ -1178,6 +1195,7 @@ Past Jobs:
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="e0o-qO-jCm"/>
-        <segue reference="Hpf-Lk-7TQ"/>
+        <segue reference="zwu-Hz-SjB"/>
+        <segue reference="ahm-xm-XHW"/>
     </inferredMetricsTieBreakers>
 </document>
